# ishe-slide

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  README.md  build.rs  devenv.nix
assets/: main.css
src/: audio.rs  main.rs
