[package]
authors = ["Florian Guggi <f.guggi@viewpointsystem.com>"]
edition = "2021"
name = "ishe-slide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
gloo = "0.11.0"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioParam",
    "Element",
    "GainNode",
    "HtmlAnchorElement",
    "Node",
    "OscillatorNode",
    "OscillatorType",
    "Performance",
    "PerformanceTiming",
] }
zip = { version = "3.0.0", default-features = false, features = ["deflate"] }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
