[package]
authors = ["Florian Guggi <f.guggi@viewpointsystem.com>"]
edition = "2024"
name = "ishe-slide"
license = "MIT"
version = "0.1.0"


[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
cpp = "0.5.10"
csv = "1.3.1"
dioxus = { version = "0.7.0-rc.0", features = ["fullstack", "router"] }
gloo = { version = "0.11.0", optional = true }
jni = { version = "0.21.1", optional = true }
js-sys = { version = "0.3.77", optional = true }
ndk-context = { version = "0.1.1", optional = true }
rodio = { version = "0.21.1", optional = true }
tokio = { version = "1.47.1", features = ["time"], optional = true }
web-sys = { version = "0.3.77", features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioParam",
    "Element",
    "GainNode",
    "HtmlAnchorElement",
    "Node",
    "OscillatorNode",
    "OscillatorType",
    "Performance",
    "PerformanceTiming",
], optional = true }
zip = { version = "3.0.0", default-features = false, features = ["deflate"] }

[features]
default = []
desktop = ["dioxus/desktop"]
mobile = [
    "dioxus/mobile",
    "dep:rodio",
    "dep:tokio",
    "dep:ndk-context",
    "dep:jni",
]
web = ["dioxus/web", "dep:gloo", "dep:js-sys", "dep:web-sys"]
server = ["dioxus/server"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build-dependencies]
cpp_build = "0.5.10"
